test/files/neg/macro-invalidusage-nontypeable.check
Test_2.scala:3: error: not found: value IDoNotExist
  Macros.foo
         ^
one error found
